--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Il mio sito web!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homework for Statistic's course</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Ciao Mondo!</h1>
-  <p>Questo è il mio nuovo sito su GitHub Pages.</p>
+
+    <h1>Website to load homework for course Statistic</h1>
+
+    <div class="container-card">
+
+        <a href="pagine/hw1.html" class="card">
+            <h3>Homework 1</h3>
+            <p>What is statistics, and why can it be useful for cybersecurity?</p>
+        </a>
+
+        </div>
+
 </body>
 </html>
