--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container-card">
 
-        <a href="pagine/hw1.html" class="card">
+        <a href="pages/hw1.html" class="card">
             <h3>Homework 1</h3>
             <p>What is statistics, and why can it be useful for cybersecurity?</p>
         </a>
