--- a/pages/hw1.html
+++ b/pages/hw1.html
@@ -1,36 +1,4 @@
 <!DOCTYPE html>
-
-<style>
-        /* Questo CSS è specifico per questa pagina */
-        body.page-hw1 {
-            max-width: 900px; /* Limita la larghezza del testo */
-            margin: 20px auto;  /* Centra la pagina */
-            padding: 20px;
-            background-color: #fff; /* Sfondo bianco per la pagina */
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-        }
-        body.page-hw1 h1, body.page-hw1 h2 {
-            text-align: left; /* Allinea a sinistra per la lettura */
-            border-bottom: 2px solid #eee;
-            padding-bottom: 5px;
-        }
-        body.page-hw1 h3 {
-            color: #0056b3;
-            margin-top: 25px;
-        }
-        body.page-hw1 p, body.page-hw1 ul {
-            max-width: none; /* Rimuove il limite precedente */
-            padding-left: 0;
-            padding-right: 0;
-            margin-left: 0; /* Rimuove i margini auto */
-            margin-right: 0;
-        }
-        body.page-hw1 ul {
-            padding-left: 25px; /* Aggiunge rientro alla lista */
-        }
-    </style>
-
 <html lang="en"> <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Homework 1: Statistics and Cybersecurity</h1>
+    <h1>Homework 1: What is statistics, and why can it be useful for cybersecurity?</h1>
     <hr>
 
     <h2>What is Statistics?</h2>
