--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework for Statistic's course</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
 
-    <h1>Website to load homework for course Statistic</h1>
+    <header>
+        <h1>Homework for Statistic's Course</h1>
+    </header>
 
-    <div class="container-card">
+    <main>
+        
+        <div class="nav-container">
 
-        <a href="pages/hw1.html" class="card">
-            <h3>Homework 1</h3>
-            <p>What is statistics, and why can it be useful for cybersecurity?</p>
-        </a>
+            <a href="pages/hw1.html" class="nav-card">
+                <h3>Homework 1</h3>
+                <p>What is statistics, and why can it be useful for cybersecurity?</p>
+            </a>
 
-        </div>
+            <a href="pages/hw2.html" class="nav-card">
+                <h3>Homework 2</h3>
+                <p>Concept of dataset and distribution. Cipher with Ceasar and decipher with Language Distribution.</p>
+            </a>
+
+            </div>
+    </main>
 
 </body>
 </html>
