aggiunta di 3 hw

--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
                 <p>Concept of dataset and distribution. Cipher with Ceasar and decipher with Language Distribution.</p>
             </a>
 
+            <a href="pages/hw3.html" class="nav-card">
+                <h3>Homework 3</h3>
+                <p>RSA Encryption, letter-by-letter application, and breaking it with Frequency Analysis.</p>
+            </a>
+
+            <a href="pages/hw4.html" class="nav-card">
+                <h3>Homework 4</h3>
+                <p>Explanation of "Convergence" and an interactive simulation of the Law of Large Numbers.</p>
+            </a>
+
+            <a href="pages/hw5.html" class="nav-card">
+                <h3>Homework 5</h3>
+                <p>Research on different types of location (Averages) and dispersion (Std, MSE) measures.</p>
+            </a>
+
             </div>
     </main>
 
