--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                 <p>Research on different types of location (Averages) and dispersion (Std, MSE) measures.</p>
             </a>
 
+            <a href="pages/hw6.html" class="nav-card">
+                <h3>Homework 6</h3>
+                <p>Proof of recurrence formulas and implementation of "online" algorithms for mean and variance.</p>
+            </a>
+
             </div>
     </main>
 
