--- a/index.html
+++ b/index.html
@@ -4,49 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework for Statistic's course</title>
-    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <header>
-        <h1>Homework for Statistic's Course</h1>
-    </header>
+    <aside class="sidebar">
+        <h2>Navigation</h2>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="pages/hw1.html">Homework 1</a></li>
+                <li><a href="pages/hw2.html">Homework 2</a></li>
+                <li><a href="pages/hw3.html">Homework 3</a></li>
+                <li><a href="pages/hw4.html">Homework 4</a></li>
+                <li><a href="pages/hw5.html">Homework 5</a></li>
+                <li><a href="pages/hw6.html">Homework 6</a></li>
+            </ul>
+        </nav>
+    </aside>
 
-    <main>
+    <main class="main-content">
         
-        <div class="nav-container">
+        <header class="page-header">
+            <h1>Homework for Statistic's Course</h1>
+            <p>Welcome to the documentation site for my statistics homework.</p>
+        </header>
 
-            <a href="pages/hw1.html" class="nav-card">
-                <h3>Homework 1</h3>
-                <p>What is statistics, and why can it be useful for cybersecurity?</p>
-            </a>
+        <section class="assignment-card">
+            <h2>About This Site</h2>
+            <p>
+                This site contains all the assignments for the Statistics course. 
+                Use the navigation bar on the left to browse through the different 
+                homework pages.
+            </p>
+            <p>
+                The site demonstrates various statistical concepts, including:
+            </p>
+            <ul>
+                <li>Data distributions and frequency analysis.</li>
+                <li>Cryptanalysis (Caesar and RSA).</li>
+                <li>The Law of Large Numbers (LLN).</li>
+                <li>Measures of location and dispersion.</li>
+                <li>Online algorithms for real-time statistics.</li>
+            </ul>
+        </section>
 
-            <a href="pages/hw2.html" class="nav-card">
-                <h3>Homework 2</h3>
-                <p>Concept of dataset and distribution. Cipher with Ceasar and decipher with Language Distribution.</p>
-            </a>
-
-            <a href="pages/hw3.html" class="nav-card">
-                <h3>Homework 3</h3>
-                <p>RSA Encryption, letter-by-letter application, and breaking it with Frequency Analysis.</p>
-            </a>
-
-            <a href="pages/hw4.html" class="nav-card">
-                <h3>Homework 4</h3>
-                <p>Explanation of "Convergence" and an interactive simulation of the Law of Large Numbers.</p>
-            </a>
-
-            <a href="pages/hw5.html" class="nav-card">
-                <h3>Homework 5</h3>
-                <p>Research on different types of location (Averages) and dispersion (Std, MSE) measures.</p>
-            </a>
-
-            <a href="pages/hw6.html" class="nav-card">
-                <h3>Homework 6</h3>
-                <p>Proof of recurrence formulas and implementation of "online" algorithms for mean and variance.</p>
-            </a>
-
-            </div>
     </main>
 
 </body>
