--- a/pages/hw4.html
+++ b/pages/hw4.html
@@ -110,7 +110,7 @@
                 <div class="demo-results">
                     
                     <div class="result-box">
-                        <h4>Convergence Path (10 Sample Trajectories)</h4>
+                        <h4>Convergence Path</h4>
                         <canvas id="convergenceChart"></canvas>
                         
                         <p style="font-style: italic; margin-top: 15px; font-size: 0.9em;">
