--- a/pages/hw2.html
+++ b/pages/hw2.html
@@ -10,20 +10,7 @@
 
 <body>
 
-    <aside class="sidebar">
-        <h2>Navigation</h2>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../pages/hw1.html">Homework 1</a></li>
-                <li><a href="../pages/hw2.html" class="active">Homework 2</a></li>
-                <li><a href="../pages/hw3.html">Homework 3</a></li>
-                <li><a href="../pages/hw4.html">Homework 4</a></li>
-                <li><a href="../pages/hw5.html">Homework 5</a></li>
-                <li><a href="../pages/hw6.html">Homework 6</a></li>
-            </ul>
-        </nav>
-    </aside>
+    <aside id="sidebar-placeholder" class="sidebar"></aside>
 
     <main class="main-content">
 
@@ -176,6 +163,7 @@
     </main>
 
     <script src="../js/hw2.js"></script>
+    <script src="../js/nav-loader.js" defer></script>
 
 </body>
 </html>
