--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="pages/hw4.html">Homework 4</a></li>
                 <li><a href="pages/hw5.html">Homework 5</a></li>
                 <li><a href="pages/hw6.html">Homework 6</a></li>
+                <li><a href="pages/hw7.html">Homework 7</a></li>
             </ul>
         </nav>
     </aside>
