--- a/pages/hw3.html
+++ b/pages/hw3.html
@@ -9,21 +9,7 @@
 </head>
 
 <body>
-
-    <aside class="sidebar">
-        <h2>Navigation</h2>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../pages/hw1.html">Homework 1</a></li>
-                <li><a href="../pages/hw2.html">Homework 2</a></li>
-                <li><a href="../pages/hw3.html" class="active">Homework 3</a></li>
-                <li><a href="../pages/hw4.html">Homework 4</a></li>
-                <li><a href="../pages/hw5.html">Homework 5</a></li>
-                <li><a href="../pages/hw6.html">Homework 6</a></li>
-            </ul>
-        </nav>
-    </aside>
+    <aside id="sidebar-placeholder" class="sidebar"></aside>
 
     <main class="main-content">
 
@@ -39,7 +25,7 @@
             <h3>What is RSA?</h3>
             <p>
                 RSA is an <strong>asymmetric cryptosystem</strong>, meaning it uses two different 
-                keys: a **Public Key** for encryption and a **Private Key** for decryption. 
+                keys: a <strong>Public Key</strong> for encryption and a <strong>Private Key</strong> for decryption. 
                 The public key can be shared with anyone without compromising security, while 
                 the private key must be kept secret.
             </p>
@@ -74,7 +60,7 @@
                 <li>
                     <strong>Choose a public exponent, `e`.</strong>
                     <br>`e` must be coprime to `ϕ(n)`. I chose: <code>e = 5</code>.
-                    <br>The **Public Key** is <code>(n=221, e=5)</code>.
+                    <br>The <strong>Public Key</strong> is <code>(n=221, e=5)</code>.
                 </li>
                 <li>
                     <strong>Calculate the private exponent, `d`.</strong>
@@ -82,7 +68,7 @@
                     <br>It must satisfy: <code>(d * e) % ϕ(n) = 1</code>.
                     <br>I solved <code>(d * 5) % 192 = 1</code>, which gives: <code>d = 77</code>.
                     <br>(Check: 77 * 5 = 385. And 385 % 192 = 1. It is correct.)
-                    <br>The **Private Key** is <code>(n=221, d=77)</code>.
+                    <br>The <strong>Private Key</strong> is <code>(n=221, d=77)</code>.
                 </li>
             </ol>
             
@@ -201,6 +187,7 @@ consumarsi, perché non le veniva in mente di aver mai visto una cosa simile.</t
     </main>
 
     <script src="../js/hw3.js"></script>
+    <script src="../js/nav-loader.js" defer></script>
 
 </body>
 </html>
