--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <li><a href="pages/hw5.html">Homework 5</a></li>
                 <li><a href="pages/hw6.html">Homework 6</a></li>
                 <li><a href="pages/hw7.html">Homework 7</a></li>
+                <li><a href="pages/hw8.html">Homework 8</a></li>
+                <li><a href="pages/hw9.html">Homework 9</a></li>
+                <li><a href="pages/hw10.html">Homework 10</a></li>
             </ul>
         </nav>
     </aside>
@@ -51,6 +54,7 @@
         </section>
 
     </main>
+    
 
 </body>
 </html>
